force-app/main/default/objects/Case/fields/Case_SLA__c.field-meta.xml
<CustomField>
    <fullName>Case_SLA__c</fullName>
    <label>Case SLA</label>
    <length>255</length>
    <type>Text</type>
</CustomField>