force-app/main/default/objects/Case/fields/SLA_Total_Time__c.field-meta.xml
<CustomField>
    <fullName>SLA_Total_Time__c</fullName>
    <label>SLA Total Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>