force-app/main/default/objects/Case/fields/Status_Change_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Status_Change_Start_Time__c</fullName>
    <description>field is used to mark case status change start time, it is used to calculate case SLA time</description>
    <label>Status Change Start Time</label>
    <type>DateTime</type>
</CustomField>